@@ -7,6 +7,8 @@
 	* makefile.vc: Updated makefile.vc to conform with Mo DeJong's
 	changes to Makefile.in and tclWinPipe.c on 2003-04-14. Now passes
 	TCL_PIPE_DLL in place of TCL_DBGX.
+	* win/tclWinTime.c: Corrected use of types to make compilation
+	compatible with VC++5.
 	
 2003-04-15  Vince Darley  <vincentdarley@users.sourceforge.net>
 
